RESOLVED FIXED71009
Fix the build if NO_LISTBOX_RENDERING is enabled
https://bugs.webkit.org/show_bug.cgi?id=71009
Summary Fix the build if NO_LISTBOX_RENDERING is enabled
Andras Becsi
Reported 2011-10-27 05:40:06 PDT
If NO_LISTBOX_RENDERING is enabled RenderMenuList::listBoxSelectItem uses the HTMLSelectElement::listBoxSelectItem function which was accidentally removed in r97533. Reintroduce HTMLSelectElement::listBoxSelectItem with a NO_LISTBOX_RENDERING guard to unbreak this setup. This code path seems to be only used by Chromium and Qt: ./Source/WebKit/chromium/src/ExternalPopupMenu.cpp:136: listPopupMenuClient->listBoxSelectItem(indices[i], (i > 0), false, (i == indices.size() - 1)); ./Source/WebKit/qt/WebCoreSupport/PopupMenuQt.cpp:148: client->listBoxSelectItem(index, ctrl, shift);
Attachments
proposed patch (2.49 KB, patch)
2011-10-27 05:42 PDT, Andras Becsi
no flags
Andras Becsi
Comment 1 2011-10-27 05:42:44 PDT
Created attachment 112667 [details] proposed patch
Kenneth Rohde Christiansen
Comment 2 2011-10-27 05:58:09 PDT
Comment on attachment 112667 [details] proposed patch On so this wasn't really unused. It is used by RenderMenu::listBoxSelectItem which is used for NO_LISTBOX_RENDERING. Given that, r=me
Andras Becsi
Comment 3 2011-10-27 06:02:51 PDT
Comment on attachment 112667 [details] proposed patch Clearing flags on attachment: 112667 Committed r98557: <http://trac.webkit.org/changeset/98557>
Andras Becsi
Comment 4 2011-10-27 06:02:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.