Fix the build if NO_LISTBOX_RENDERING is enabled https://bugs.webkit.org/show_bug.cgi?id=71009

Reviewed by Kenneth Rohde Christiansen.

If NO_LISTBOX_RENDERING is enabled RenderMenuList::listBoxSelectItem uses the
HTMLSelectElement::listBoxSelectItem function which was accidentally removed in r97533.
Reintroduce HTMLSelectElement::listBoxSelectItem with a NO_LISTBOX_RENDERING guard to unbreak this setup.

This is covered by:
Source/WebCore/manual-tests/no-listbox-rendering.html

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::listBoxSelectItem): Reintroduce.
* html/HTMLSelectElement.h:

Canonical link: https://commits.webkit.org/87202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98557 268f45cc-cd09-0410-ab3c-d52691b4dbfc